<resources>
    <string name="app_name">ID1212HangmanApp</string>
    <string name="welcome_message">Welcome to the Game!</string>
    <string name="submit_button">Submit</string>
    <string name="new_game_button">New Game</string>
    <string name="quit_buttton">Quit</string>
    <string name="start_making_your_guesses">Start making your guesses</string>
    <string name="number_of_guesses_left">Number of guesses left:</string>
    <string name="score_number">0</string>
    <string name="score_string">Score:</string>
    <string name="num_guesses">0</string>
    <string name="score">0</string>
</resources>
