<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".client.view.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_message"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/start_making_your_guesses"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_guess"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:id="@+id/submit_button"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/user_guess"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_button"
        android:id="@+id/new_game_button"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/submit_button"
        android:layout_toStartOf="@+id/submit_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_buttton"
        android:id="@+id/quit_button"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/submit_button"
        android:layout_toEndOf="@+id/submit_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/word_text"
        android:layout_marginTop="39dp"
        android:width="200dp"
        android:layout_below="@+id/submit_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/number_of_guesses_left"
        android:id="@+id/textView3"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/new_game_button"
        android:layout_alignLeft="@+id/new_game_button"
        android:layout_alignStart="@+id/new_game_button"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/score_string"
        android:id="@+id/textView4"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/score_number"
        android:id="@+id/score"
        android:paddingLeft="12dip"
        android:layout_alignTop="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/score"
        android:id="@+id/num_guesses"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/submit_button"
        android:layout_toEndOf="@+id/submit_button" /><![CDATA[



    Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button4"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp" />

]]>
</RelativeLayout>
